# swc-example

./: Cargo.toml  README.md
src/: main.rs
