[package]
edition = "2021"
name = "swc-example"
version = "0.1.0"

[dependencies]
swc_atoms = "0.4.0"
swc_common = {version = "0.27.0", features = ["tty-emitter", "sourcemap"]}
swc_ecmascript = {version = "0.188.0", features = ["parser", "transforms", "module", "optimization", "react", "typescript", "utils", "visit", "codegen", "utils", "preset_env"]}
